--- a/index.html
+++ b/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Import font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css" />
+
     <!--Import Google Icon Font-->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" />
-    <!--Import materialize.css-->
+
+    <!-- Compiled and minified CSS -->
     <link
-      type="text/css"
       rel="stylesheet"
-      href="css/materialize.min.css"
-      media="screen,projection" />
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+
+    <!-- style -->
+    <link rel="stylesheet" href="css/style.css" />
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <!-- navbar -->
+    <header>
+      <div class="nav-wrapper transparent">
+        <div class="container">
+          <a href="#" class="brand-logo">nanang</a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="#">home</a></li>
+            <li><a href="#">product</a></li>
+            <li><a href="#">blog</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
