--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <!-- Import font awesome -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css" />
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous" />
 
     <!--Import Google Icon Font-->
     <link
@@ -26,17 +28,42 @@
   <body>
     <!-- navbar -->
     <header>
-      <div class="nav-wrapper transparent">
+      <nav class="nav-wrapper transparent">
         <div class="container">
-          <a href="#" class="brand-logo">nanang</a>
+          <a href="#" class="brand-logo">Hariku</a>
+          <a href="#" class="sidenav-trigger" data-target="mobile-phone">
+            <i class="material-icons">menu</i>
+          </a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="#">home</a></li>
-            <li><a href="#">product</a></li>
-            <li><a href="#">blog</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Porfolio</a></li>
+          </ul>
+
+          <!-- mobile-phone -->
+          <ul class="sidenav grey-darken-2" id="mobile-phone">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Porfolio</a></li>
           </ul>
         </div>
-      </div>
+      </nav>
     </header>
+
+    <!-- photo/gird -->
+
+    <!-- parallax -->
+
+    <!-- services/tabs -->
+
+    <!-- parallax -->
+
+    <!-- form -->
+
+    <!-- footer -->
+
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
