--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
     </header>
 
     <!-- photo/gird -->
+    <section class="container section" id="photos">
+      <div class="row">
+        <div class="col 12 l4">
+          <img src="/img/2.jpg" alt="" class="responsive-img materialboxed" />
+        </div>
+        <div class="col 12 l6"></div>
+      </div>
+    </section>
 
     <!-- parallax -->
 
@@ -66,5 +74,7 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- script js -->
+    <script src="js/script.js"></script>
   </body>
 </html>
