--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
         <div class="col 12 l4">
           <img src="/img/2.jpg" alt="" class="responsive-img materialboxed" />
         </div>
-        <div class="col 12 l6"></div>
+        <div class="col 12 l6 offset-l1">
+          <h2 class="light-blue-text text-darken-4">wawbanget</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis
+            non sequi sint? Rerum, recusandae quo. Nulla corrupti odio optio
+            doloremque repudiandae quisquam doloribus molestiae, ea eligendi.
+            Consequatur saepe ullam iusto.
+          </p>
+        </div>
       </div>
     </section>
 
