--- a/index.html
+++ b/index.html
@@ -53,6 +53,36 @@
     <!-- photo/gird -->
     <section class="container section" id="photos">
       <div class="row">
+        <div class="col s12 l4">
+          <img src="/img/2.jpg" alt="" class="responsive-img materialboxed" />
+        </div>
+        <div class="col s12 l6 offset-l1">
+          <h2 class="light-blue-text text-darken-4">wawbanget</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis
+            non sequi sint? Rerum, recusandae quo. Nulla corrupti odio optio
+            doloremque repudiandae quisquam doloribus molestiae, ea eligendi.
+            Consequatur saepe ullam iusto.
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 l4 offset-l1 push-l7">
+          <img src="/img/2.jpg" alt="" class="responsive-img materialboxed" />
+        </div>
+        <div class="col 12 l6 offset-l1 pull-l5 right-align">
+          <h2 class="light-blue-text text-darken-4">wawbanget</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis
+            non sequi sint? Rerum, recusandae quo. Nulla corrupti odio optio
+            doloremque repudiandae quisquam doloribus molestiae, ea eligendi.
+            Consequatur saepe ullam iusto.
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col 12 l4">
           <img src="/img/2.jpg" alt="" class="responsive-img materialboxed" />
         </div>
