--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       <div class="row">
         <div class="col 12 l4">
-          <img src="/img/2.jpg" alt="" class="responsive-img materialboxed" />
+          <img src="/img/5.png" alt="" class="responsive-img materialboxed" />
         </div>
         <div class="col 12 l6 offset-l1">
           <h2 class="light-blue-text text-darken-4">wawbanget</h2>
@@ -99,10 +99,28 @@
     </section>
 
     <!-- parallax -->
+    <div class="parallax-container">
+      <div class="parallax">
+        <img src="/img/3.jpg" alt="" class="responsive-img" />
+      </div>
+    </div>
 
     <!-- services/tabs -->
+    <div class="container">
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur
+        itaque distinctio provident quidem facere recusandae atque alias,
+        commodi sequi aliquam. Modi doloremque enim placeat, minus ipsum aut
+        reprehenderit? Neque, at.
+      </p>
+    </div>
 
     <!-- parallax -->
+    <div class="parallax-container">
+      <div class="parallax">
+        <img src="/img/4.png" alt="" class="responsive-img" />
+      </div>
+    </div>
 
     <!-- form -->
 
