--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
     </div>
 
     <!-- services/tabs -->
-    <div class="container">
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur
-        itaque distinctio provident quidem facere recusandae atque alias,
-        commodi sequi aliquam. Modi doloremque enim placeat, minus ipsum aut
-        reprehenderit? Neque, at.
-      </p>
-    </div>
+    <section class="section container" id="services">
+      <div class="row">
+        <div class="col s12 l4">
+          <h3 class="light-blue-text text-darken-4">What Many!</h3>
+        </div>
+        <div class="col s12 l6 offset-l2"></div>
+      </div>
+    </section>
 
     <!-- parallax -->
     <div class="parallax-container">
