--- a/index.html
+++ b/index.html
@@ -110,8 +110,23 @@
       <div class="row">
         <div class="col s12 l4">
           <h3 class="light-blue-text text-darken-4">What Many!</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
+            ullam? Laborum officia doloremque exercitationem maiores deserunt,
+            minima molestias nulla ut consequatur possimus iusto. Ratione
+            corporis quasi sapiente incidunt vel officia?
+          </p>
         </div>
-        <div class="col s12 l6 offset-l2"></div>
+        <div class="col s12 l6 offset-l2">
+          <ul class="tabs">
+            <li class="tab col s6">
+              <a href="#photography" class="active light-blue-text text-darken-4">Photography</a">
+            </li>
+            <li class="tab col s6">
+              <a href="#editing" class=" light-blue-text text-darken-4">Editing</a">
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
