--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <a href="#photography" class="active light-blue-text text-darken-4">Photography</a">
             </li>
             <li class="tab col s6">
-              <a href="#editing" class=" light-blue-text text-darken-4">Editing</a">
+              <a href="#editing" class="light-blue-text text-darken-4">Editing</a>
             </li>
           </ul>
         </div>
