--- a/index.html
+++ b/index.html
@@ -117,15 +117,41 @@
             corporis quasi sapiente incidunt vel officia?
           </p>
         </div>
+
+        <!-- photography & editing -->
         <div class="col s12 l6 offset-l2">
           <ul class="tabs">
             <li class="tab col s6">
-              <a href="#photography" class="active light-blue-text text-darken-4">Photography</a">
+              <a
+                href="#photography"
+                class="active light-blue-text text-darken-4"
+                >photography</a
+              >
             </li>
             <li class="tab col s6">
-              <a href="#editing" class="light-blue-text text-darken-4">Editing</a>
+              <a href="#editing" class="light-blue-text text-darken-4"
+                >Editing</a
+              >
             </li>
           </ul>
+          <div class="col s6" id="photography">
+            <p class="flow-text light-blue-text text-darken-4">photography</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero
+              provident nisi, ut voluptatibus itaque, unde optio, voluptatem
+              sapiente similique aperiam suscipit fugit nihil ullam? Magni ipsam
+              voluptatum qui a eius.
+            </p>
+          </div>
+        </div>
+        <div class="col s6" id="editing">
+          <p class="flow-text light-blue-text text-darken-4">Editing</p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque,
+            eveniet nobis. Numquam laborum assumenda blanditiis nam illo ea,
+            iste doloremque, repellat quod explicabo earum dolorum fugiat
+            nostrum, totam eligendi asperiores!
+          </p>
         </div>
       </div>
     </section>
