--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               >
             </li>
           </ul>
-          <div class="col s6" id="photography">
+          <div class="col s12" id="photography">
             <p class="flow-text light-blue-text text-darken-4">photography</p>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero
@@ -144,14 +144,9 @@
             </p>
           </div>
         </div>
-        <div class="col s6" id="editing">
+        <div class="col s12" id="editing">
           <p class="flow-text light-blue-text text-darken-4">Editing</p>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque,
-            eveniet nobis. Numquam laborum assumenda blanditiis nam illo ea,
-            iste doloremque, repellat quod explicabo earum dolorum fugiat
-            nostrum, totam eligendi asperiores!
-          </p>
+          <p>Lorem, ipsum dolor sit amet consectetur</p>
         </div>
       </div>
     </section>
