--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
               voluptatum qui a eius.
             </p>
           </div>
-        </div>
-        <div class="col s12" id="editing">
-          <p class="flow-text light-blue-text text-darken-4">Editing</p>
-          <p>Lorem, ipsum dolor sit amet consectetur</p>
+          <div class="col s12" id="editing">
+            <p class="flow-text light-blue-text text-darken-4">Editing</p>
+            <p>Lorem, ipsum dolor sit amet consectetur</p>
+          </div>
         </div>
       </div>
     </section>
@@ -159,7 +159,28 @@
     </div>
 
     <!-- form -->
-
+    <section class="section container" id="contact">
+      <div class="row">
+        <div class="col s12 l5">
+          <h2 class="light-blue-text text-darken-4">Get in Tech</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam fugit
+            iste perferendis qui aliquid obcaecati nihil excepturi nam iure
+            quos, quasi iusto dicta nulla, veniam repudiandae deleniti
+            cupiditate ab! Assumenda!
+          </p>
+        </div>
+        <div class="col s12 l5 offset-l2">
+          <form>
+            <div class="input-field">
+              <i class="material-icons prefix">email</i>
+              <input type="email" id="email" />
+              <label for="email">Email</label>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
     <!-- footer -->
 
     <!-- jquery -->
