--- a/index.html
+++ b/index.html
@@ -175,7 +175,41 @@
             <div class="input-field">
               <i class="material-icons prefix">email</i>
               <input type="email" id="email" />
-              <label for="email">Email</label>
+              <label for="email">Your email</label>
+            </div>
+            <div class="input-field">
+              <i class="material-icons prefix">message</i>
+              <textarea
+                class="materialize-textarea"
+                name="message"
+                id="message"
+                cols="30"
+                rows="10">
+              </textarea>
+              <label for="message">Your message</label>
+            </div>
+            <div class="input-field">
+              <input type="date" id="date" class="datepicker" />
+              <label for="date">Pilih tanggal anda membutuhkan saya</label>
+            </div>
+            <div class="input-field">
+              <p>Service required</p>
+              <p>
+                <label>
+                  <input type="checkbox" />
+                  <span>photography</span>
+                </label>
+              </p>
+              <p>
+                <label>
+                  <input type="checkbox" />
+                  <span>Editing</span>
+                </label>
+              </p>
+            </div>
+
+            <div class="input-field">
+              <button class="btn">Submit</button>
             </div>
           </form>
         </div>
