--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               <label for="message">Your message</label>
             </div>
             <div class="input-field">
-              <input type="date" id="date" class="datepicker" />
+              <input type="text" id="date" class="datepicker" />
               <label for="date">Pilih tanggal anda membutuhkan saya</label>
             </div>
             <div class="input-field">
@@ -208,7 +208,7 @@
               </p>
             </div>
 
-            <div class="input-field">
+            <div class="input-field center">
               <button class="btn">Submit</button>
             </div>
           </form>
