--- a/index.html
+++ b/index.html
@@ -215,8 +215,33 @@
         </div>
       </div>
     </section>
-    <!-- footer -->
 
+    <!-- footer -->
+    <footer class="page-footer grey darken-3">
+      <div class="container">
+        <div class="row">
+          <div class="col s12 l6">
+            <h5>About me</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laudantium blanditiis nesciunt iste, modi recusandae veritatis
+              dolorum est incidunt. Atque unde odit vero voluptates debitis
+              veniam neque deleniti molestiae nesciunt libero.
+            </p>
+          </div>
+          <div class="col s12 l4 offset-l2">
+            <h5>connect</h5>
+            <li><a href="#" class="grey-text text-lighten-3">Github</a></li>
+            <li><a href="#" class="grey-text text-lighten-3">showwcase</a></li>
+            <li><a href="#" class="grey-text text-lighten-3">LinkedIn</a></li>
+            <li><a href="#" class="grey-text text-lighten-3">Instagram</a></li>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright grey darken-4">
+        <div class="container center-align">&copy; 2023 Hariku</div>
+      </div>
+    </footer>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <!-- Compiled and minified JavaScript -->
