--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         </div>
       </div>
       <div class="footer-copyright grey darken-4">
-        <div class="container center-align">&copy; 2023 Hariku</div>
+        <div class="container center-align">&copy; 2023 Hariku 2023</div>
       </div>
     </footer>
     <!-- jquery -->
