--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <!-- Import font awesome -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous" />
+      crossorigin="anonymous" /> -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     <!--Import Google Icon Font-->
     <link
@@ -231,10 +235,23 @@
           </div>
           <div class="col s12 l4 offset-l2">
             <h5>connect</h5>
-            <li><a href="#" class="grey-text text-lighten-3">Github</a></li>
+            <!-- <li><a href="#" class="grey-text text-lighten-3">Github</a></li>
             <li><a href="#" class="grey-text text-lighten-3">showwcase</a></li>
             <li><a href="#" class="grey-text text-lighten-3">LinkedIn</a></li>
-            <li><a href="#" class="grey-text text-lighten-3">Instagram</a></li>
+            <li><a href="#" class="grey-text text-lighten-3">Instagram</a></li> -->
+
+            <a href="#" class="grey-text text-lighten-3">
+              <i class="fa-brands fa-square-github" style="font-size: 48px"></i>
+            </a>
+            <a href="#" class="grey-text text-lighten-3"> </a>
+            <a href="#" class="grey-text text-lighten-3"> </a>
+            <a href="#" class="grey-text text-lighten-3"> </a>
+
+            <a href="#" class="grey-text text-lighten-3">
+              <i class="fa fa-car" style="font-size: 48px"></i>
+            </a>
+
+            <i class="fa fa-car" style="font-size: 60px; color: red"></i>
           </div>
         </div>
       </div>
