--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 
     <!--Import Google Icon Font-->
     <link
@@ -42,6 +42,23 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Porfolio</a></li>
+            <li>
+              <a
+                href="#"
+                class="tooltipped btn-floating btn-small white darken-4"
+                data-tooltip="This is Instagram">
+                <i class="fa-brands fa-instagram" style="color: salmon"></i>
+              </a>
+            </li>
+            <!-- <li>
+              <a
+                href="#"
+                class="btn-floating tooltipped btn-small white darken-4"
+                data-position="top"
+                data-tooltip="I am a tooltip">
+                <i class="fa-brands fa-instagram" style="color: salmon"></i>
+              </a>
+            </li> -->
           </ul>
 
           <!-- mobile-phone -->
@@ -235,23 +252,10 @@
           </div>
           <div class="col s12 l4 offset-l2">
             <h5>connect</h5>
-            <!-- <li><a href="#" class="grey-text text-lighten-3">Github</a></li>
+            <li><a href="#" class="grey-text text-lighten-3">Github</a></li>
             <li><a href="#" class="grey-text text-lighten-3">showwcase</a></li>
             <li><a href="#" class="grey-text text-lighten-3">LinkedIn</a></li>
-            <li><a href="#" class="grey-text text-lighten-3">Instagram</a></li> -->
-
-            <a href="#" class="grey-text text-lighten-3">
-              <i class="fa-brands fa-square-github" style="font-size: 48px"></i>
-            </a>
-            <a href="#" class="grey-text text-lighten-3"> </a>
-            <a href="#" class="grey-text text-lighten-3"> </a>
-            <a href="#" class="grey-text text-lighten-3"> </a>
-
-            <a href="#" class="grey-text text-lighten-3">
-              <i class="fa fa-car" style="font-size: 48px"></i>
-            </a>
-
-            <i class="fa fa-car" style="font-size: 60px; color: red"></i>
+            <li><a href="#" class="grey-text text-lighten-3">Instagram</a></li>
           </div>
         </div>
       </div>
