--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <li>
               <a
                 href="#"
-                class="tooltipped btn-floating btn-small white darken-4"
-                data-tooltip="This is Instagram">
-                <i class="fa-brands fa-instagram" style="color: salmon"></i>
+                class="tooltipped btn-floating btn-small black darken-4"
+                data-tooltip="I am a tooltip">
+                <i class="fa-brands fa-instagram"></i>
               </a>
             </li>
             <!-- <li>
