--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <i class="material-icons">menu</i>
           </a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Porfolio</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#porfolio">Porfolio</a></li>
             <li>
               <a
                 href="#"
@@ -54,16 +54,16 @@
 
           <!-- mobile-phone -->
           <ul class="sidenav grey-darken-2" id="mobile-phone">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Porfolio</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#porfolio">Porfolio</a></li>
           </ul>
         </div>
       </nav>
     </header>
 
     <!-- photo/gird -->
-    <section class="container section" id="photos">
+    <section class="container section" id="about">
       <div class="row">
         <div class="col s12 l4">
           <img src="/img/2.jpg" alt="" class="responsive-img materialboxed" />
@@ -118,7 +118,7 @@
     </div>
 
     <!-- services/tabs -->
-    <section class="section container" id="services">
+    <section class="section container" id="porfolio">
       <div class="row">
         <div class="col s12 l4">
           <h3 class="light-blue-text text-darken-4">What Many!</h3>
