--- a/index.html
+++ b/index.html
@@ -167,7 +167,12 @@
       <div class="row">
         <div class="col s12 l5">
           <h2 class="light-blue-text text-darken-4">Get in Tech</h2>
-          <p></p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Repudiandae molestias perferendis quam ex optio vel dignissimos at
+            adipisci. Quibusdam necessitatibus sint neque harum aut eveniet
+            recusandae nisi eius quam ipsa.
+          </p>
         </div>
         <div class="col s12 l5 offset-l2">
           <form>
