--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <body>
     <!-- navbar -->
     <header>
-      <nav class="nav-wrapper transparent">
+      <nav class="nav-wrapper">
         <div class="container">
-          <a href="#" class="brand-logo">Hariku</a>
+          <a href="#" class="brand-logo">Digital <span>Garden</span></a>
           <a href="#" class="sidenav-trigger" data-target="mobile-phone">
             <i class="material-icons">menu</i>
           </a>
