--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
       <nav class="nav-wrapper">
         <div class="container">
-          <a href="#" class="brand-logo">Digital <span>Garden</span></a>
+          <a href="#" class="brand-logo judul">Digital <span>Garden</span></a>
           <a href="#" class="sidenav-trigger" data-target="mobile-phone">
             <i class="material-icons">menu</i>
           </a>
