--- a/index.html
+++ b/index.html
@@ -40,15 +40,19 @@
           </a>
           <ul class="right hide-on-med-and-down">
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#porfolio">Porfolio</a></li>
+            <li><a href="#layanan">Layanan</a></li>
+            <li><a href="#tentangkami">Tentang kami</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#kontak">Kontak & Karir</a></li>
           </ul>
 
           <!-- mobile-phone -->
           <ul class="sidenav grey-darken-2" id="mobile-phone">
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#porfolio">Porfolio</a></li>
+            <li><a href="#layanan">Layanan</a></li>
+            <li><a href="#tentangkami">Tentang kami</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#kontak">Kontak & Karir</a></li>
           </ul>
         </div>
       </nav>
