--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
             <li><a href="#tentangkami">Tentang kami</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#kontak">Kontak & Karir</a></li>
+            <li>
+              <a class="waves-effect waves-light btn-small"
+                ><i class="material-icons left">cloud</i>button</a
+              >
+            </li>
           </ul>
 
           <!-- mobile-phone -->
