--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
       <nav class="nav-wrapper">
         <div class="container">
-          <a href="#" class="brand-logo judul">Digital <span>Garden</span></a>
+          <a href="#" class="brand-logo judul">Digital<span>garden</span></a>
           <a href="#" class="sidenav-trigger" data-target="mobile-phone">
             <i class="material-icons">menu</i>
           </a>
@@ -44,11 +44,6 @@
             <li><a href="#tentangkami">Tentang kami</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#kontak">Kontak & Karir</a></li>
-            <li>
-              <a class="waves-effect waves-light btn-small"
-                ><i class="material-icons left">cloud</i>button</a
-              >
-            </li>
           </ul>
 
           <!-- mobile-phone -->
