--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <!-- navbar -->
     <header>
-      <nav class="nav-wrapper">
+      <nav class="nav-wrapper no-shadow">
         <div class="container">
           <a href="#" class="brand-logo judul">Digital<span>garden</span></a>
           <a href="#" class="sidenav-trigger" data-target="mobile-phone">
