--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
   <body>
     <!-- navbar -->
     <header>
-      <nav class="nav-wrapper no-shadow">
+      <nav class="nav-wrapper">
         <div class="container">
-          <a href="#" class="brand-logo judul">Digital<span>garden</span></a>
+          <a href="#" class="brand-logo judul">
+            <img src="/img/logo-jakarta-sans-3.png" alt=""
+          /></a>
           <a href="#" class="sidenav-trigger" data-target="mobile-phone">
             <i class="material-icons">menu</i>
           </a>
