--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
   <body>
     <!-- navbar -->
     <header>
-      <nav class="nav-wrapper">
+      <nav class="nav-wrapper z-depth-0">
         <div class="container">
           <a href="#" class="brand-logo judul">
-            <img src="/img/logo-jakarta-sans-3.png" alt=""
-          /></a>
+            <img src="/img/logo-jakarta-sans-3.png" alt="digitalkcreative" />
+          </a>
           <a href="#" class="sidenav-trigger" data-target="mobile-phone">
             <i class="material-icons">menu</i>
           </a>
