--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
           </ul>
         </div>
       </nav>
+      <div class="container">
+        <div class="row">
+          <div class="col s4 l6">
+            <h2>
+              We are <br />
+              <b>digitalk</b> <br />
+              creative
+            </h2>
+          </div>
+          <div class="col s8 l6">
+            <img src="img/roket.png" alt="" />
+          </div>
+        </div>
+      </div>
     </header>
 
     <!-- photo/gird -->
