--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           <div class="col s4 l6">
             <h2>
               We are <br />
-              <b>digitalk</b> <br />
-              creative
+              <b>Digitalk</b> <br />
+              Creative.
             </h2>
           </div>
           <div class="col s8 l6">
