--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h2>
               We are <br />
               <b>Digitalk</b> <br />
-              Creative.
+              Creative
             </h2>
           </div>
           <div class="col s8 l6">
