--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 
     <!-- style -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/src/css/style.css" />
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,7 +35,9 @@
       <nav class="nav-wrapper z-depth-0">
         <div class="container">
           <a href="#" class="brand-logo judul">
-            <img src="/img/logo-jakarta-sans-3.png" alt="digitalkcreative" />
+            <img
+              src="/src/img/logo-jakarta-sans-3.png"
+              alt="digitalkcreative" />
           </a>
           <a href="#" class="sidenav-trigger" data-target="mobile-phone">
             <i class="material-icons">menu</i>
@@ -58,27 +60,16 @@
           </ul>
         </div>
       </nav>
-      <div class="container">
-        <div class="row">
-          <div class="col s4 l6">
-            <h2>
-              We are <br />
-              <b>Digitalk</b> <br />
-              Creative
-            </h2>
-          </div>
-          <div class="col s8 l6">
-            <img src="img/roket.png" alt="" />
-          </div>
-        </div>
-      </div>
     </header>
 
     <!-- photo/gird -->
     <section class="container section" id="about">
       <div class="row">
         <div class="col s12 l4">
-          <img src="/img/2.jpg" alt="" class="responsive-img materialboxed" />
+          <img
+            src="/src/img/2.jpg"
+            alt=""
+            class="responsive-img materialboxed" />
         </div>
         <div class="col s12 l6 offset-l1">
           <h2 class="light-blue-text text-darken-4">wawbanget</h2>
@@ -93,7 +84,10 @@
 
       <div class="row">
         <div class="col s12 l4 offset-l1 push-l7">
-          <img src="/img/2.jpg" alt="" class="responsive-img materialboxed" />
+          <img
+            src="/src/img/2.jpg"
+            alt=""
+            class="responsive-img materialboxed" />
         </div>
         <div class="col 12 l6 offset-l1 pull-l5 right-align">
           <h2 class="light-blue-text text-darken-4">wawbanget</h2>
@@ -108,7 +102,10 @@
 
       <div class="row">
         <div class="col 12 l4">
-          <img src="/img/5.png" alt="" class="responsive-img materialboxed" />
+          <img
+            src="/src/img/4.png"
+            alt=""
+            class="responsive-img materialboxed" />
         </div>
         <div class="col 12 l6 offset-l1">
           <h2 class="light-blue-text text-darken-4">wawbanget</h2>
@@ -125,7 +122,7 @@
     <!-- parallax -->
     <div class="parallax-container">
       <div class="parallax">
-        <img src="/img/3.jpg" alt="" class="responsive-img" />
+        <img src="src/img/3.jpg" alt="" class="responsive-img" />
       </div>
     </div>
 
@@ -178,7 +175,7 @@
     <!-- parallax -->
     <div class="parallax-container">
       <div class="parallax">
-        <img src="/img/4.png" alt="" class="responsive-img" />
+        <img src="src/img/4.png" alt="" class="responsive-img" />
       </div>
     </div>
 
@@ -271,6 +268,6 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- script js -->
-    <script src="js/script.js"></script>
+    <script src="src/js/script.js"></script>
   </body>
 </html>
