--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>digitalkcreative</title>
   </head>
 
   <body>
@@ -60,6 +61,41 @@
           </ul>
         </div>
       </nav>
+
+      <div class="slider">
+        <ul class="slides">
+          <li>
+            <img src="src/img/2.jpg" />
+            <!-- random image -->
+            <div class="caption center-align">
+              <h3>This is our big Tagline!</h3>
+              <h5 class="light grey-text text-lighten-3">
+                Here's our small slogan.
+              </h5>
+            </div>
+          </li>
+          <li>
+            <img src="https://lorempixel.com/580/250/nature/2" />
+            <!-- random image -->
+            <div class="caption left-align">
+              <h3>Left Aligned Caption</h3>
+              <h5 class="light grey-text text-lighten-3">
+                Here's our small slogan.
+              </h5>
+            </div>
+          </li>
+          <li>
+            <img src="https://lorempixel.com/580/250/nature/3" />
+            <!-- random image -->
+            <div class="caption right-align">
+              <h3>Right Aligned Caption</h3>
+              <h5 class="light grey-text text-lighten-3">
+                Here's our small slogan.
+              </h5>
+            </div>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <!-- photo/gird -->
