--- a/index.html
+++ b/index.html
@@ -62,39 +62,41 @@
         </div>
       </nav>
 
-      <div class="slider">
-        <ul class="slides">
-          <li>
-            <img src="src/img/2.jpg" />
-            <!-- random image -->
-            <div class="caption center-align">
-              <h3>This is our big Tagline!</h3>
-              <h5 class="light grey-text text-lighten-3">
-                Here's our small slogan.
-              </h5>
-            </div>
-          </li>
-          <li>
-            <img src="https://lorempixel.com/580/250/nature/2" />
-            <!-- random image -->
-            <div class="caption left-align">
-              <h3>Left Aligned Caption</h3>
-              <h5 class="light grey-text text-lighten-3">
-                Here's our small slogan.
-              </h5>
-            </div>
-          </li>
-          <li>
-            <img src="https://lorempixel.com/580/250/nature/3" />
-            <!-- random image -->
-            <div class="caption right-align">
-              <h3>Right Aligned Caption</h3>
-              <h5 class="light grey-text text-lighten-3">
-                Here's our small slogan.
-              </h5>
-            </div>
-          </li>
-        </ul>
+      <div class="container">
+        <div class="slider">
+          <ul class="slides">
+            <li>
+              <img src="src/img/slider1.jpg" />
+              <!-- random image -->
+              <div class="caption center-align">
+                <h3>This is our big Tagline!</h3>
+                <h5 class="light grey-text text-lighten-3">
+                  Here's our small slogan.
+                </h5>
+              </div>
+            </li>
+            <li>
+              <img src="src/img/slider2.jpg" />
+              <!-- random image -->
+              <div class="caption left-align">
+                <h3>Left Aligned Caption</h3>
+                <h5 class="light grey-text text-lighten-3">
+                  Here's our small slogan.
+                </h5>
+              </div>
+            </li>
+            <li>
+              <img src="src/img/slider3.jpg" />
+              <!-- random image -->
+              <div class="caption right-align">
+                <h3>Right Aligned Caption</h3>
+                <h5 class="light grey-text text-lighten-3">
+                  Here's our small slogan.
+                </h5>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
