--- a/index.html
+++ b/index.html
@@ -158,9 +158,11 @@
     </section>
 
     <!-- parallax -->
-    <div class="parallax-container">
-      <div class="parallax">
-        <img src="src/img/3.jpg" alt="" class="responsive-img" />
+    <div class="container">
+      <div class="parallax-container">
+        <div class="parallax">
+          <img src="src/img/3.jpg" alt="" class="responsive-img" />
+        </div>
       </div>
     </div>
 
@@ -209,13 +211,6 @@
         </div>
       </div>
     </section>
-
-    <!-- parallax -->
-    <div class="parallax-container">
-      <div class="parallax">
-        <img src="src/img/4.png" alt="" class="responsive-img" />
-      </div>
-    </div>
 
     <!-- form -->
     <section class="section container" id="contact">
