--- a/index.html
+++ b/index.html
@@ -25,7 +25,34 @@
 
   <body>
     <!-- navbar -->
+    <div class="navbar-fixed">
+      <nav class="green dark-darken3">
+        <div class="container">
+          <div class="nav-wrapper">
+            <a href="#!" class="brand-logo">green</a>
+            <a href="#" data-target="mobile-app" class="sidenav-trigger">
+              <i class="material-icons">menu</i>
+            </a>
+            <ul class="right hide-on-med-and-down">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Layanan</a></li>
+              <li><a href="#Tentang">Tentang Kami</a></li>
+              <li><a href="#Portfolio">Portfolio </a></li>
+              <li><a href="#kontak">Kontak Karir</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
+      <!-- mobile app -->
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Layanan</a></li>
+        <li><a href="#Tentang">Tentang Kami</a></li>
+        <li><a href="#Portfolio">Portfolio </a></li>
+        <li><a href="#kontak">Kontak Karir</a></li>
+      </ul>
+    </div>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <!-- Compiled and minified JavaScript -->
