--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </nav>
 
       <!-- mobile app -->
-      <ul class="right hide-on-med-and-down">
+      <ul class="right hide-on-med-and-down" id="mobile-app">
         <li><a href="#">Home</a></li>
         <li><a href="#">Layanan</a></li>
         <li><a href="#Tentang">Tentang Kami</a></li>
