--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <!-- navbar -->
     <div class="navbar-fixed">
-      <nav class="green dark-darken3">
+      <nav class="blue darken-2">
         <div class="container">
           <div class="nav-wrapper">
             <a href="#!" class="brand-logo">green</a>
@@ -34,8 +34,8 @@
               <i class="material-icons">menu</i>
             </a>
             <ul class="right hide-on-med-and-down">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Layanan</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#layanan">Layanan</a></li>
               <li><a href="#Tentang">Tentang Kami</a></li>
               <li><a href="#Portfolio">Portfolio </a></li>
               <li><a href="#kontak">Kontak Karir</a></li>
@@ -43,16 +43,15 @@
           </div>
         </div>
       </nav>
-
-      <!-- mobile app -->
-      <ul class="right hide-on-med-and-down" id="mobile-app">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Layanan</a></li>
-        <li><a href="#Tentang">Tentang Kami</a></li>
-        <li><a href="#Portfolio">Portfolio </a></li>
-        <li><a href="#kontak">Kontak Karir</a></li>
-      </ul>
     </div>
+    <!-- mobile app -->
+    <ul class="sidenav" id="mobile-app">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#layanan">Layanan</a></li>
+      <li><a href="#Tentang">Tentang Kami</a></li>
+      <li><a href="#Portfolio">Portfolio </a></li>
+      <li><a href="#kontak">Kontak Karir</a></li>
+    </ul>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <!-- Compiled and minified JavaScript -->
